Fix score calculation