@@ -14,105 +14,57 @@ import org.bukkit.World;
 import org.bukkit.event.block.BlockBreakEvent;
 import org.bukkit.event.entity.EntityDeathEvent;
 import org.bukkit.event.inventory.PrepareItemCraftEvent;
+import org.bukkit.scheduler.BukkitRunnable;
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
 
-import java.time.ZoneId;
-import java.util.*;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.transform.Transformer;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
-
-import org.bukkit.scheduler.BukkitRunnable;
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
 import java.io.File;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-
+import java.util.*;
 
 public final class StatCraft extends JavaPlugin implements Listener {
 
     private File overworldToWatch;
     private Score scoreCalculator;
+    // Permet de cumuler les scores issus des événements (casse, craft, mob)
     private final Map<UUID, Integer> playerScores = new HashMap<>();
 
-    @EventHandler
-    public void onBlockBreak(BlockBreakEvent event) {
-        Player player = event.getPlayer();
-        Material blockType = event.getBlock().getType();
-
-        getLogger().info("Bloc cassé : " + blockType); // Log pour voir si l'événement est capturé
-
-        int blockScore = scoreCalculator.getConfigLoader().getBlockScore(blockType);
-
-        if (blockScore > 0) {
-            int playerScore = playerScores.getOrDefault(player.getUniqueId(), 0);
-            playerScores.put(player.getUniqueId(), playerScore + blockScore);
-            player.sendMessage("Vous avez gagné " + blockScore + " points pour avoir miné " + blockType);
-        }
-    }
-
-    @EventHandler
-    public void onEntityDeath(EntityDeathEvent event) {
-        if (event.getEntity().getKiller() != null) {
-            Player player = event.getEntity().getKiller();
-            EntityType entityType = event.getEntityType();
-
-            int mobScore = scoreCalculator.getConfigLoader().getMobScore(entityType);
-
-            if (mobScore > 0) {
-                int playerScore = playerScores.getOrDefault(player.getUniqueId(), 0);
-                playerScores.put(player.getUniqueId(), playerScore + mobScore);
-                player.sendMessage("Vous avez gagné " + mobScore + " points pour avoir tué un " + entityType);
-            }
-        }
-    }
-
-    @EventHandler
-    public void onItemCraft(PrepareItemCraftEvent event) {
-        if (event.getView().getPlayer() instanceof Player) {
-            Player player = (Player) event.getView().getPlayer();
-            if (event.getInventory().getResult() != null) {
-                Material craftedItem = event.getInventory().getResult().getType();
-                int craftScore = scoreCalculator.getConfigLoader().getCraftScore(craftedItem);
-
-                if (craftScore > 0) {
-                    int playerScore = playerScores.getOrDefault(player.getUniqueId(), 0);
-                    playerScores.put(player.getUniqueId(), playerScore + craftScore);
-                    player.sendMessage("Vous avez gagné " + craftScore + " points pour avoir crafté un " + craftedItem);
-                }
-            }
-        }
-    }
+    private int sessionNumber = 0;
+    // On enregistre ici les statistiques initiales de chaque joueur (blocs, mobs et crafts)
+    private final Map<String, Integer> initialStats = new HashMap<>();
+    private final Map<String, Integer> playerSessions = new HashMap<>();
 
     @Override
     public void onEnable() {
-        // Plugin startup logic
+        // Enregistrement des listeners et démarrage du plugin
         this.getServer().getPluginManager().registerEvents(this, this);
-        getLogger().info("Le plugin est activé !");
-
+        getLogger().info("[StatCraft] Le plugin est activé !");
         saveDefaultConfig();
 
-        // Vérifier si le monde est en mode Hardcore
-        World world = this.getServer().getWorlds().getFirst();
-        boolean isHardcoreMode = this.getServer().getWorlds().getFirst().isHardcore();
-        getLogger().info("Mode de jeu : " + (isHardcoreMode ? "Hardcore" : "Survival"));
+        // Détermine le mode de jeu (Hardcore ou Survival) à partir du premier monde
+        World world = this.getServer().getWorlds().get(0);
+        boolean isHardcoreMode = world.isHardcore();
+        getLogger().info("[StatCraft] Mode de jeu : " + (isHardcoreMode ? "Hardcore" : "Survival"));
 
-        // Créer le fichier XML indiquant le mode Hardcore
+        // Création du fichier XML indiquant le mode du serveur
         createServerModeFile(isHardcoreMode);
 
-        // Charger la configuration
+        // Chargement de la configuration depuis le fichier config.yml
         File configFile = new File(getDataFolder(), "config.yml");
         ConfigLoader configLoader = new ConfigLoader();
         configLoader.loadConfig(configFile, isHardcoreMode);
-
         this.scoreCalculator = new Score(configLoader);
 
-        // Récupère le premier monde (souvent le monde principal)
+        // Enregistrement des statistiques initiales pour les joueurs à la connexion
         checkServerGameMode(world);
-
         sessionNumber = 0;
         //resetAllPlayersStatsInMemory();
 
@@ -120,6 +72,7 @@ public final class StatCraft extends JavaPlugin implements Listener {
 
         new FolderCheckTask().runTaskTimer(this, 0L, 200L);
 
+        // Enregistrement et log des statistiques toutes les 30 secondes (600 ticks)
         new BukkitRunnable() {
             @Override
             public void run() {
@@ -128,380 +81,421 @@ public final class StatCraft extends JavaPlugin implements Listener {
         }.runTaskTimer(this, 0L, 600L);
     }
 
-    public void createServerModeFile(boolean isHardcoreMode) {
-        try {
-            // Crée le répertoire si nécessaire
-            File directory = new File(getDataFolder(), "server_info");
-            if (!directory.exists()) {
-                boolean dirCreated = directory.mkdirs();
-                if (!dirCreated) {
-                    getLogger().warning("Impossible de créer le répertoire : " + directory.getPath());
-                    return;
+    @Override
+    public void onDisable() {
+        getLogger().info("[StatCraft] Le plugin est désactivé !");
+    }
+
+    // ----------------- ÉVÉNEMENTS -----------------
+
+    // Lorsqu'un joueur casse un bloc, on logge immédiatement l'action avec la valeur en points
+    @EventHandler
+    public void onBlockBreak(BlockBreakEvent event) {
+        Player player = event.getPlayer();
+        Material blockType = event.getBlock().getType();
+
+        int blockScore = scoreCalculator.getConfigLoader().getBlockScore(blockType);
+        if (blockScore > 0) {
+            int currentScore = playerScores.getOrDefault(player.getUniqueId(), 0);
+            playerScores.put(player.getUniqueId(), currentScore + blockScore);
+            getLogger().info("[StatCraft] " + player.getName() + " broke block " + blockType + " awarding " + blockScore + " points.");
+        }
+    }
+
+    // Lorsqu'un joueur tue une entité, on logge immédiatement l'action avec la valeur en points
+    @EventHandler
+    public void onEntityDeath(EntityDeathEvent event) {
+        if (event.getEntity().getKiller() != null) {
+            Player player = event.getEntity().getKiller();
+            EntityType entityType = event.getEntityType();
+            int mobScore = scoreCalculator.getConfigLoader().getMobScore(entityType);
+            if (mobScore > 0) {
+                int currentScore = playerScores.getOrDefault(player.getUniqueId(), 0);
+                playerScores.put(player.getUniqueId(), currentScore + mobScore);
+                getLogger().info("[StatCraft] " + player.getName() + " killed " + entityType + " awarding " + mobScore + " points.");
+            }
+        }
+    }
+
+    // Lorsqu'un joueur craft un objet, on logge immédiatement l'action avec la valeur en points
+    @EventHandler
+    public void onItemCraft(PrepareItemCraftEvent event) {
+        if (event.getView().getPlayer() instanceof Player) {
+            Player player = (Player) event.getView().getPlayer();
+            if (event.getInventory().getResult() != null) {
+                Material craftedItem = event.getInventory().getResult().getType();
+                int craftScore = scoreCalculator.getConfigLoader().getCraftScore(craftedItem);
+                if (craftScore > 0) {
+                    int currentScore = playerScores.getOrDefault(player.getUniqueId(), 0);
+                    playerScores.put(player.getUniqueId(), currentScore + craftScore);
+                    getLogger().info("[StatCraft] " + player.getName() + " crafted " + craftedItem + " awarding " + craftScore + " points.");
                 }
             }
+        }
+    }
 
-            // Crée le fichier XML
+    // Lorsqu'un joueur se connecte, on enregistre ses statistiques initiales pour la session (blocs, mobs et crafts)
+    @EventHandler
+    public void onPlayerJoin(PlayerJoinEvent event) {
+        Player player = event.getPlayer();
+        int currentSession = sessionNumber;
+        if (!playerSessions.containsKey(player.getName()) || playerSessions.get(player.getName()) != currentSession) {
+            initialStats.put(player.getName() + "_blocks", getTotalStatistic(player, Statistic.MINE_BLOCK, Material.class));
+            initialStats.put(player.getName() + "_mobs", getTotalStatistic(player, Statistic.KILL_ENTITY, EntityType.class));
+            initialStats.put(player.getName() + "_playTime", player.getStatistic(Statistic.PLAY_ONE_MINUTE) / 1200);
+            // Enregistre aussi les statistiques de crafting
+            initialStats.put(player.getName() + "_craft", getTotalStatistic(player, Statistic.CRAFT_ITEM, Material.class));
+            playerSessions.put(player.getName(), currentSession);
+            getLogger().info("[StatCraft] Statistiques initiales enregistrées pour " + player.getName());
+        }
+    }
+
+    // Lors du chargement d'un nouveau monde, on réinitialise les statistiques en mémoire
+    @EventHandler
+    public void onWorldLoad(WorldLoadEvent event) {
+        World world = this.getServer().getWorlds().get(0);
+        if (world.getName().equals("world")) {
+            resetAllPlayersStatsInMemory();
+            getLogger().info("[StatCraft] Nouveau monde chargé. Statistiques réinitialisées.");
+        }
+    }
+
+    // Lors de la mort d'un joueur en mode Hardcore, on incrémente le numéro de session et on réinitialise les stats
+    @EventHandler
+    public void onPlayerDeath(PlayerDeathEvent event) {
+        World world = event.getEntity().getWorld();
+        if (world.isHardcore()) {
+            sessionNumber++;
+            resetAllPlayersStatsInMemory();
+        }
+    }
+
+    // ----------------- MÉTHODES D'AIDE -----------------
+
+    public void createServerModeFile(boolean isHardcoreMode) {
+        try {
+            File directory = new File(getDataFolder(), "server_info");
+            if (!directory.exists() && !directory.mkdirs()) {
+                getLogger().warning("[StatCraft] Impossible de créer le répertoire : " + directory.getPath());
+                return;
+            }
+
             File file = new File(directory, "server_mode.xml");
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
             DocumentBuilder builder = factory.newDocumentBuilder();
             Document doc = builder.newDocument();
 
-            // Racine du document
             Element rootElement = doc.createElement("server");
             doc.appendChild(rootElement);
 
-            // Ajoute l'élément "hardcoreMode"
             Element hardcoreElement = doc.createElement("hardcoreMode");
             hardcoreElement.appendChild(doc.createTextNode(String.valueOf(isHardcoreMode)));
             rootElement.appendChild(hardcoreElement);
 
-            // Sauvegarde le fichier
             TransformerFactory transformerFactory = TransformerFactory.newInstance();
             Transformer transformer = transformerFactory.newTransformer();
             DOMSource source = new DOMSource(doc);
             StreamResult result = new StreamResult(file);
             transformer.transform(source, result);
 
-            getLogger().info("Fichier server_mode.xml créé avec succès.");
+            getLogger().info("[StatCraft] Fichier server_mode.xml créé avec succès.");
         } catch (Exception e) {
-            getLogger().severe("Une erreur est survenue lors de la création du fichier server_mode.xml.");
-            getLogger().severe(e.getMessage());
-            for (StackTraceElement element : e.getStackTrace()) {
-                getLogger().severe(element.toString());
-            }
+            getLogger().severe("[StatCraft] Erreur lors de la création du fichier server_mode.xml.");
+            e.printStackTrace();
         }
     }
 
-
+    // Tâche qui surveille l'existence du dossier "overworld"
     private class FolderCheckTask extends BukkitRunnable {
         @Override
         public void run() {
             if (!overworldToWatch.exists()) {
-                getLogger().info("Le dossier 'overworld' a été supprimé !");
+                getLogger().info("[StatCraft] Le dossier 'overworld' a été supprimé !");
                 resetAllPlayersStatsInMemory();
-                cancel(); // Annule la tâche si le dossier est supprimé
+                cancel();
             }
         }
     }
 
-    @Override
-    public void onDisable() {
-        // Plugin shutdown logic
-        getLogger().info("Le plugin est désactivé !");
-    }
-
     public void checkServerGameMode(World world) {
-        boolean isHardcore = world.isHardcore();
-
-        if (isHardcore) {
-            getLogger().info("Le monde principal est en mode HARDCORE !");
-        } else {
-            getLogger().info("Le monde principal n'est pas en mode HARDCORE.");
-        }
-    }
-
-    @EventHandler
-    public void onPlayerDeath(PlayerDeathEvent event) {
-        World world = event.getEntity().getWorld();
-
         if (world.isHardcore()) {
-            sessionNumber++;  // Incrémente le numéro de session
-            resetAllPlayersStatsInMemory();
+            getLogger().info("[StatCraft] Le monde principal est en mode HARDCORE !");
+        } else {
+            getLogger().info("[StatCraft] Le monde principal n'est pas en mode HARDCORE.");
         }
     }
 
-    private int sessionNumber = 0;  // Identifiant de la session
-    private final Map<String, Integer> playerSessions = new HashMap<>();
-    private final Map<String, Integer> initialStats = new HashMap<>();
-
-    @EventHandler
-    public void onPlayerJoin(PlayerJoinEvent event) {
-        Player player = event.getPlayer();
-        int currentSession = sessionNumber;
-
-        if (!playerSessions.containsKey(player.getName()) || playerSessions.get(player.getName()) != currentSession) {
-            // Enregistre les statistiques initiales du joueur pour la session
-            initialStats.put(player.getName() + "_blocks", getTotalStatistic(player, Statistic.MINE_BLOCK, Material.class));
-            initialStats.put(player.getName() + "_mobs", getTotalStatistic(player, Statistic.KILL_ENTITY, EntityType.class));
-            initialStats.put(player.getName() + "_playTime", player.getStatistic(Statistic.PLAY_ONE_MINUTE) / 1200);
-            playerSessions.put(player.getName(), currentSession);  // Associe le joueur à la session actuelle
-            getLogger().info("Statistiques initiales enregistrées pour le joueur: " + player.getName());
-        }
-    }
-
-    @EventHandler
-    public void onWorldLoad(WorldLoadEvent event) {
-        World world = getServer().getWorlds().getFirst();
-
-        if (world.getName().equals("world")) {  // Remplace par le nom de ton monde si nécessaire
-            // Ici, tu peux réinitialiser les statistiques une fois que le nouveau monde est chargé
-            resetAllPlayersStatsInMemory();
-            getLogger().info("Le nouveau monde a été régénéré. Les statistiques sont réinitialisées.");
-        }
-    }
-
+    // Renvoie l'horodatage actuel au format yyyy-MM-dd_HH-mm-ss
     public String getCurrentTimestamp() {
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss");
         return LocalDateTime.now(ZoneId.of("Europe/Paris")).format(formatter);
     }
 
-    public void writeStatistics(String playerName, int totalBlocksMined, int mobsKilled, int playTimeMinutes, int playerScore, Player player) {
+    /**
+     * Méthode d'écriture des statistiques détaillées dans un fichier XML.
+     * Pour chaque catégorie, on inscrit :
+     * - Les entrées détaillées (exemple : pour chaque bloc miné, mob tué ou objet crafté)
+     * - Une balise <score> indiquant le score pondéré (nombre * coefficient config)
+     * - Une balise <total…> indiquant le nombre total d'actions
+     * Le score global est la somme des scores pondérés, auquel s'ajoute le temps de jeu (1 point/minute).
+     */
+    public void writeStatistics(String playerName, int blocksDiff, int mobsDiff, int playTimeMinutes, int playerScore, Player player) {
         try {
             String timestamp = getCurrentTimestamp();
-
             File directory = new File("player_statistics/session" + sessionNumber + "/" + playerName);
-            if (!directory.exists()) {
-                boolean dirCreated = directory.mkdirs();
-                if (!dirCreated) {
-                    getLogger().warning("Impossible de créer le répertoire : " + directory.getPath());
-                    // Gère l'erreur ici, comme lancer une exception ou utiliser un répertoire alternatif
-                }
+            if (!directory.exists() && !directory.mkdirs()) {
+                getLogger().warning("[StatCraft] Impossible de créer le répertoire : " + directory.getPath());
             }
 
-            // Création du document XML
             DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
             DocumentBuilder builder = factory.newDocumentBuilder();
             Document doc = builder.newDocument();
 
-            // Racine du document
             Element rootElement = doc.createElement("joueur");
             rootElement.setAttribute("nom", playerName);
             doc.appendChild(rootElement);
 
-            // Détails des blocs minés
+            // --- BLOCS MINÉS ---
+            int totalBlocksCount = 0;
+            int totalBlocksScore = 0;
             Element blocksElement = doc.createElement("blocsMines");
             rootElement.appendChild(blocksElement);
-
             for (Material material : Material.values()) {
-                int minedBlocks = player.getStatistic(Statistic.MINE_BLOCK, material);  // Renommé en `minedBlocks`
-                if (minedBlocks > 0) {
-                    Element blockElement = doc.createElement("minerai");
-                    blockElement.setAttribute("nom", material.toString());
-                    blockElement.appendChild(doc.createTextNode(String.valueOf(minedBlocks)));
-                    blocksElement.appendChild(blockElement);
+                // Filtrer les matériaux legacy
+                if (material.toString().startsWith("LEGACY_"))
+                    continue;
+                try {
+                    int mined = player.getStatistic(Statistic.MINE_BLOCK, material);
+                    if (mined > 0) {
+                        totalBlocksCount += mined;
+                        int factor = scoreCalculator.getConfigLoader().getBlockScore(material);
+                        totalBlocksScore += mined * factor;
+                        Element blockElement = doc.createElement("minerai");
+                        blockElement.setAttribute("nom", material.toString());
+                        blockElement.appendChild(doc.createTextNode(String.valueOf(mined)));
+                        blocksElement.appendChild(blockElement);
+                    }
+                } catch (IllegalArgumentException e) {
+                    // Ignorer
                 }
             }
-
-            // Ajouter le total des blocs minés
+            Element blocksScoreElement = doc.createElement("score");
+            blocksScoreElement.appendChild(doc.createTextNode(String.valueOf(totalBlocksScore)));
+            blocksElement.appendChild(blocksScoreElement);
             Element totalBlocksElement = doc.createElement("totalBlocsMines");
-            totalBlocksElement.appendChild(doc.createTextNode(String.valueOf(totalBlocksMined)));
+            totalBlocksElement.appendChild(doc.createTextNode(String.valueOf(totalBlocksCount)));
             blocksElement.appendChild(totalBlocksElement);
 
-            // Détails des mobs tués
+            // --- MOBS TUÉS ---
+            int totalMobsCount = 0;
+            int totalMobsScore = 0;
             Element mobsElement = doc.createElement("mobsTues");
             rootElement.appendChild(mobsElement);
-
-            for (EntityType entityType : EntityType.values()) {
-                if (entityType != EntityType.UNKNOWN) {
-                    int killedMobs = player.getStatistic(Statistic.KILL_ENTITY, entityType);
-                    if (killedMobs > 0) {
+            for (EntityType et : EntityType.values()) {
+                if (et == EntityType.UNKNOWN)
+                    continue;
+                try {
+                    int killed = player.getStatistic(Statistic.KILL_ENTITY, et);
+                    if (killed > 0) {
+                        totalMobsCount += killed;
+                        int factor = scoreCalculator.getConfigLoader().getMobScore(et);
+                        totalMobsScore += killed * factor;
                         Element mobElement = doc.createElement("monstre");
-                        mobElement.setAttribute("nom", entityType.toString());
-                        mobElement.appendChild(doc.createTextNode(String.valueOf(killedMobs)));
+                        mobElement.setAttribute("nom", et.toString());
+                        mobElement.appendChild(doc.createTextNode(String.valueOf(killed)));
                         mobsElement.appendChild(mobElement);
                     }
+                } catch (IllegalArgumentException e) {
+                    // Ignorer
                 }
             }
-
-            // Ajouter le total des mobs tué
+            Element mobsScoreElement = doc.createElement("score");
+            mobsScoreElement.appendChild(doc.createTextNode(String.valueOf(totalMobsScore)));
+            mobsElement.appendChild(mobsScoreElement);
             Element totalMobsElement = doc.createElement("totalMobsTues");
-            totalMobsElement.appendChild(doc.createTextNode(String.valueOf(mobsKilled)));
+            totalMobsElement.appendChild(doc.createTextNode(String.valueOf(totalMobsCount)));
             mobsElement.appendChild(totalMobsElement);
 
-            // Détails des objets craftés
-            Element craftElement = doc.createElement("objetsCraftes");
-            rootElement.appendChild(craftElement);
-
+            // --- OBJETS CRAFTÉS ---
+            int totalCraftsCount = 0;
+            int totalCraftsScore = 0;
+            Element craftsElement = doc.createElement("objetsCraftes");
+            rootElement.appendChild(craftsElement);
             for (Material material : Material.values()) {
-                int craftedItems = player.getStatistic(Statistic.CRAFT_ITEM, material);  // Renommé en `craftedItems`
-                if (craftedItems > 0) {
-                    Element craftItemElement = doc.createElement("objet");
-                    craftItemElement.setAttribute("nom", material.toString());
-                    craftItemElement.appendChild(doc.createTextNode(String.valueOf(craftedItems)));
-                    craftElement.appendChild(craftItemElement);
+                if (material.toString().startsWith("LEGACY_"))
+                    continue;
+                try {
+                    int crafted = player.getStatistic(Statistic.CRAFT_ITEM, material);
+                    if (crafted > 0) {
+                        totalCraftsCount += crafted;
+                        int factor = scoreCalculator.getConfigLoader().getCraftScore(material);
+                        totalCraftsScore += crafted * factor;
+                        Element craftElement = doc.createElement("objet");
+                        craftElement.setAttribute("nom", material.toString());
+                        craftElement.appendChild(doc.createTextNode(String.valueOf(crafted)));
+                        craftsElement.appendChild(craftElement);
+                    }
+                } catch (IllegalArgumentException e) {
+                    // Ignorer
                 }
             }
+            Element craftsScoreElement = doc.createElement("score");
+            craftsScoreElement.appendChild(doc.createTextNode(String.valueOf(totalCraftsScore)));
+            craftsElement.appendChild(craftsScoreElement);
+            Element totalCraftsElement = doc.createElement("totalObjetsCraftes");
+            totalCraftsElement.appendChild(doc.createTextNode(String.valueOf(totalCraftsCount)));
+            craftsElement.appendChild(totalCraftsElement);
 
-            // Ajouter le total des objets craftés
-            int totalItemsCrafted = calculateTotalCraftedItems(player);
-            Element totalCraftElement = doc.createElement("totalObjetsCraftes");
-            totalCraftElement.appendChild(doc.createTextNode(String.valueOf(totalItemsCrafted)));
-            craftElement.appendChild(totalCraftElement);
-
-            // Détails du temps de jeu
+            // --- TEMPS DE JEU ---
             Element playTimeElement = doc.createElement("tempsDeJeu");
             playTimeElement.appendChild(doc.createTextNode(String.valueOf(playTimeMinutes)));
             rootElement.appendChild(playTimeElement);
 
-            // Détails du score global
-            Element scoreElement = doc.createElement("scoreTotal");
-            scoreElement.appendChild(doc.createTextNode(String.valueOf(playerScore)));
-            rootElement.appendChild(scoreElement);
+            // --- SCORE GLOBAL ---
+            int globalScore = totalBlocksScore + totalMobsScore + totalCraftsScore + playTimeMinutes;
+            Element scoreTotalElement = doc.createElement("scoreTotal");
+            scoreTotalElement.appendChild(doc.createTextNode(String.valueOf(globalScore)));
+            rootElement.appendChild(scoreTotalElement);
 
-            // Sauvegarder le fichier XML du joueur
             TransformerFactory transformerFactory = TransformerFactory.newInstance();
             Transformer transformer = transformerFactory.newTransformer();
             DOMSource source = new DOMSource(doc);
             StreamResult result = new StreamResult(new File(directory, timestamp + ".xml"));
             transformer.transform(source, result);
 
-            getLogger().info("Statistiques détaillées enregistrées pour " + playerName + " à " + timestamp);
+            getLogger().info("[StatCraft] Statistiques détaillées enregistrées pour " + playerName + " à " + timestamp);
         } catch (Exception e) {
-            getLogger().severe("Une erreur est survenue lors de l'enregistrement des statistiques pour " + playerName);
-            getLogger().severe(e.getMessage());
-            for (StackTraceElement element : e.getStackTrace()) {
-                getLogger().severe(element.toString());
-            }
-        }
-
-    }
-
-    public int calculateTotalCraftedItems(Player player) {
-        int totalCraftedItems = 0;
-
-        // Parcourir tous les types d'outils, armes, armures, etc. fabriqués
-        Material[] craftableItems = {
-                Material.WOODEN_SWORD, Material.STONE_SWORD, Material.IRON_SWORD, Material.DIAMOND_SWORD, Material.NETHERITE_SWORD,
-                Material.WOODEN_PICKAXE, Material.STONE_PICKAXE, Material.IRON_PICKAXE, Material.DIAMOND_PICKAXE, Material.NETHERITE_PICKAXE,
-                Material.WOODEN_AXE, Material.STONE_AXE, Material.IRON_AXE, Material.DIAMOND_AXE, Material.NETHERITE_AXE,
-                Material.WOODEN_SHOVEL, Material.STONE_SHOVEL, Material.IRON_SHOVEL, Material.DIAMOND_SHOVEL, Material.NETHERITE_SHOVEL,
-                Material.LEATHER_HELMET, Material.IRON_HELMET, Material.DIAMOND_HELMET, Material.NETHERITE_HELMET,
-                Material.LEATHER_CHESTPLATE, Material.IRON_CHESTPLATE, Material.DIAMOND_CHESTPLATE, Material.NETHERITE_CHESTPLATE,
-                Material.LEATHER_LEGGINGS, Material.IRON_LEGGINGS, Material.DIAMOND_LEGGINGS, Material.NETHERITE_LEGGINGS,
-                Material.LEATHER_BOOTS, Material.IRON_BOOTS, Material.DIAMOND_BOOTS, Material.NETHERITE_BOOTS
-        };
-
-        // Additionner tous les objets fabriqués pour chaque matériau
-        for (Material material : craftableItems) {
-            int itemsCrafted = player.getStatistic(Statistic.CRAFT_ITEM, material);
-            totalCraftedItems += itemsCrafted;
-        }
-
-        return totalCraftedItems;
-    }
-
-    public void logPlayerStatistics() {
-        List<Player> players = new ArrayList<>(getServer().getOnlinePlayers());
-
-        if (players.isEmpty()) {
-            getLogger().info("Aucun joueur n'est connecté.");
-        } else {
-            for (Player player : players) {
-                getLogger().info("Statistiques du joueur: " + player.getName());
-
-                // Récupérer les statistiques actuelles
-                int totalBlocksMined = getTotalStatistic(player, Statistic.MINE_BLOCK, Material.class);
-                int totalMobsKilled = getTotalStatistic(player, Statistic.KILL_ENTITY, EntityType.class);
-                int playTimeTicks = player.getStatistic(Statistic.PLAY_ONE_MINUTE); // Temps joué en ticks
-                int playTimeMinutes = playTimeTicks / 1200; // Conversion en minutes
-
-                // Calculer les écarts par rapport aux statistiques initiales de la session
-                int initialBlocksMined = initialStats.getOrDefault(player.getName() + "_blocks", 0);
-                int initialMobsKilled = initialStats.getOrDefault(player.getName() + "_mobs", 0);
-                int initialPlayTime = initialStats.getOrDefault(player.getName() + "_playTime", 0);
-
-                int blocksMinedDiff = (totalBlocksMined - initialBlocksMined);
-                int mobsKilledDiff = totalMobsKilled - initialMobsKilled;
-                int playTimeDiff = playTimeMinutes - initialPlayTime;
-
-                //Calcul le score
-                int timeScore = scoreCalculator.calculatePlayerScore(player, playTimeDiff);
-
-                int eventScore = playerScores.getOrDefault(player.getUniqueId(), 0);
-
-                int totalScore = eventScore + timeScore;
-
-                // Afficher les écarts des statistiques par rapport aux valeurs initiales
-                getLogger().info(player.getName() + " a miné " + blocksMinedDiff + " blocs depuis le début de la session.");
-                getLogger().info(player.getName() + " a tué " + mobsKilledDiff + " monstres depuis le début de la session.");
-                getLogger().info(player.getName() + " a joué " + playTimeDiff + " minutes depuis le début de la session.");
-                getLogger().info(player.getName() + " a un score de " + totalScore + " points.");
-
-                // Enregistrer les nouvelles statistiques dans un fichier XML
-                writeStatistics(player.getName(), blocksMinedDiff, mobsKilledDiff, playTimeDiff, totalScore, player);
-            }
+            getLogger().severe("[StatCraft] Erreur lors de l'enregistrement des statistiques pour " + playerName);
+            e.printStackTrace();
         }
     }
 
+    // Calcule le total d'une statistique (en itérant sur toutes les valeurs d'une enum)
     public int getTotalStatistic(Player player, Statistic statistic, Class<?> enumType) {
         int total = 0;
-
         if (enumType == Material.class) {
             for (Material material : Material.values()) {
                 try {
                     total += player.getStatistic(statistic, material);
                 } catch (IllegalArgumentException e) {
-                    // Ignorer les exceptions si le matériel n'a pas de statistique associée
+                    // Ignorer
                 }
             }
         } else if (enumType == EntityType.class) {
-            for (EntityType entityType : EntityType.values()) {
+            for (EntityType et : EntityType.values()) {
                 try {
-                    total += player.getStatistic(statistic, entityType);
+                    total += player.getStatistic(statistic, et);
                 } catch (IllegalArgumentException e) {
-                    // Ignorer les exceptions si l'entité n'a pas de statistique associée
+                    // Ignorer
                 }
             }
         }
-
         return total;
     }
 
-    public void resetAllPlayersStatsInMemory() {
-        for (Player player : getServer().getOnlinePlayers()) {
-            // Réinitialiser toutes les statistiques associées à chaque joueur
-            for (Statistic statistic : Statistic.values()) {
-                if (statistic == Statistic.MINE_BLOCK) {
-                    // Réinitialiser les blocs minés pour chaque type de bloc
-                    for (Material material : Material.values()) {
-                        try {
-                            player.setStatistic(Statistic.MINE_BLOCK, material, 0);
-                        } catch (IllegalArgumentException e) {
-                            // Ignorer les exceptions si le matériel n'a pas de statistique associée
-                        }
-                    }
-                } else if (statistic == Statistic.KILL_ENTITY) {
-                    // Réinitialiser les monstres tués pour chaque type d'entité
-                    for (EntityType entityType : EntityType.values()) {
-                        try {
-                            player.setStatistic(Statistic.KILL_ENTITY, entityType, 0);
-                        } catch (IllegalArgumentException e) {
-                            // Ignorer les exceptions si l'entité n'a pas de statistique associée
-                        }
-                    }
-                } else if (statistic == Statistic.CRAFT_ITEM) {
-                    // Réinitialiser les objets craftés pour chaque type d'objet
-                    for (Material material : Material.values()) {
-                        try {
-                            player.setStatistic(Statistic.CRAFT_ITEM, material, 0);
-                        } catch (IllegalArgumentException e) {
-                            // Ignorer les exceptions si l'objet n'a pas de statistique associée
-                        }
-                    }
-                } else {
-                    // Réinitialiser les autres statistiques globales (comme PLAY_ONE_MINUTE)
+    // Affiche dans la console (toutes les 30 secondes) les totaux et scores pondérés depuis le début de la session
+    public void logPlayerStatistics() {
+        List<Player> players = new ArrayList<>(getServer().getOnlinePlayers());
+        if (players.isEmpty()) {
+            getLogger().info("[StatCraft] Aucun joueur n'est connecté.");
+        } else {
+            for (Player player : players) {
+                String playerName = player.getName();
+                getLogger().info("[StatCraft] Statistiques du joueur: " + playerName);
+
+                // Calcul des totaux depuis le début de la session (en filtrant les matériaux legacy)
+                int totalBlocks = 0;
+                int weightedBlocks = 0;
+                for (Material mat : Material.values()) {
+                    if (mat.toString().startsWith("LEGACY_"))
+                        continue;
                     try {
-                        player.setStatistic(statistic, 0);
-                    } catch (IllegalArgumentException e) {
-                        // Ignorer les statistiques qui nécessitent des paramètres (comme MINE_BLOCK)
-                    }
+                        int val = player.getStatistic(Statistic.MINE_BLOCK, mat);
+                        totalBlocks += val;
+                        weightedBlocks += val * scoreCalculator.getConfigLoader().getBlockScore(mat);
+                    } catch (IllegalArgumentException e) { }
                 }
+                int totalMobs = 0;
+                int weightedMobs = 0;
+                for (EntityType et : EntityType.values()) {
+                    if (et == EntityType.UNKNOWN)
+                        continue;
+                    try {
+                        int val = player.getStatistic(Statistic.KILL_ENTITY, et);
+                        totalMobs += val;
+                        weightedMobs += val * scoreCalculator.getConfigLoader().getMobScore(et);
+                    } catch (IllegalArgumentException e) { }
+                }
+                int totalCrafts = 0;
+                int weightedCrafts = 0;
+                for (Material mat : Material.values()) {
+                    if (mat.toString().startsWith("LEGACY_"))
+                        continue;
+                    try {
+                        int val = player.getStatistic(Statistic.CRAFT_ITEM, mat);
+                        totalCrafts += val;
+                        weightedCrafts += val * scoreCalculator.getConfigLoader().getCraftScore(mat);
+                    } catch (IllegalArgumentException e) { }
+                }
+                int playTimeTicks = player.getStatistic(Statistic.PLAY_ONE_MINUTE);
+                int playTimeMinutes = playTimeTicks / 1200;
+
+                // Calcul des différences depuis le début de la session
+                int initialBlocks = initialStats.getOrDefault(playerName + "_blocks", 0);
+                int initialMobs = initialStats.getOrDefault(playerName + "_mobs", 0);
+                int initialCrafts = initialStats.getOrDefault(playerName + "_craft", 0);
+                int diffBlocks = totalBlocks - initialBlocks;
+                int diffMobs = totalMobs - initialMobs;
+                int diffCrafts = totalCrafts - initialCrafts;
+
+                int globalScore = weightedBlocks + weightedMobs + weightedCrafts + playTimeMinutes;
+
+                getLogger().info("[StatCraft] " + playerName + " - Blocs minés: " + diffBlocks + " (Score: " + weightedBlocks + ")");
+                getLogger().info("[StatCraft] " + playerName + " - Mobs tués: " + diffMobs + " (Score: " + weightedMobs + ")");
+                getLogger().info("[StatCraft] " + playerName + " - Objets craftés: " + diffCrafts + " (Score: " + weightedCrafts + ")");
+                getLogger().info("[StatCraft] " + playerName + " - Temps de jeu: " + playTimeMinutes + " minutes");
+                getLogger().info("[StatCraft] " + playerName + " - Score global: " + globalScore + " points");
+
+                // Enregistrement des statistiques détaillées dans le XML
+                writeStatistics(playerName, diffBlocks, diffMobs, playTimeMinutes, globalScore, player);
             }
-
-            // Réinitialiser les statistiques de session pour chaque joueur
-            initialStats.put(player.getName() + "_blocks", 0);
-            initialStats.put(player.getName() + "_mobs", 0);
-            initialStats.put(player.getName() + "_playTime", 0);
-
-            playerSessions.put(player.getName(), sessionNumber);  // Associer la session actuelle au joueur
-            getLogger().info("Statistiques réinitialisées pour le joueur: " + player.getName() + " dans la session " + sessionNumber);
         }
     }
 
-
-
-
-
-
-
+    // Réinitialise en mémoire les statistiques de tous les joueurs connectés et les statistiques de session
+    public void resetAllPlayersStatsInMemory() {
+        for (Player player : getServer().getOnlinePlayers()) {
+            for (Statistic stat : Statistic.values()) {
+                if (stat == Statistic.MINE_BLOCK) {
+                    for (Material mat : Material.values()) {
+                        try {
+                            player.setStatistic(Statistic.MINE_BLOCK, mat, 0);
+                        } catch (IllegalArgumentException e) { }
+                    }
+                } else if (stat == Statistic.KILL_ENTITY) {
+                    for (EntityType et : EntityType.values()) {
+                        try {
+                            player.setStatistic(Statistic.KILL_ENTITY, et, 0);
+                        } catch (IllegalArgumentException e) { }
+                    }
+                } else if (stat == Statistic.CRAFT_ITEM) {
+                    for (Material mat : Material.values()) {
+                        try {
+                            player.setStatistic(Statistic.CRAFT_ITEM, mat, 0);
+                        } catch (IllegalArgumentException e) { }
+                    }
+                } else {
+                    try {
+                        player.setStatistic(stat, 0);
+                    } catch (IllegalArgumentException e) { }
+                }
+            }
+            initialStats.put(player.getName() + "_blocks", 0);
+            initialStats.put(player.getName() + "_mobs", 0);
+            initialStats.put(player.getName() + "_craft", 0);
+            initialStats.put(player.getName() + "_playTime", 0);
+            playerSessions.put(player.getName(), sessionNumber);
+            getLogger().info("[StatCraft] Statistiques réinitialisées pour " + player.getName() + " dans la session " + sessionNumber);
+        }
+    }
 }
